// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoKki kuwRTV"
>
  <li
    className="sc-fzoYkl gobJet"
    onClick={[Function]}
  >
    <span
      className="sc-fzoiQi bPNqHS"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoYkl gobJet"
    onClick={[Function]}
  >
    <span
      className="sc-fzoiQi bPNqHS"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoYkl gobJet"
    onClick={[Function]}
  >
    <span
      className="sc-fzoiQi bPNqHS"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoKki kuwRTV"
>
  <li
    className="sc-fzoYkl iBMuKh"
    onClick={[Function]}
  >
    <span
      className="sc-fzoiQi bPNqHS"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoYkl iBMuKh"
    onClick={[Function]}
  >
    <span
      className="sc-fzoiQi bPNqHS"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoYkl iBMuKh"
    onClick={[Function]}
  >
    <span
      className="sc-fzoiQi bPNqHS"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
